--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -27,6 +27,11 @@ jobs:
         run: |
           cd scraper
           node scrape.js
+      
+      - name: Configure Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "your-email@example.com"  # 替换为你的 email
 
       - name: Publish to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
