--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -16,18 +16,19 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16'  # 使用 Node.js 版本
+          node-version: '16'  # 使用的 Node.js 版本
 
       - name: Install dependencies
         run: |
           cd scraper
           npm install puppeteer
+          ls -al scraper  # 列出内容以确认文件存在
 
       - name: Run scraper
         run: |
           cd scraper
-          node scrape.js
-      
+          node scrape.js || echo 'Scraping failed'  # 捕获脚本失败信息并输出
+
       - name: Configure Git
         run: |
           git config --global user.name "GitHub Actions"
@@ -38,4 +39,3 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./scraper  # 修改为实际输出目录
-          publish_branch: gh-pages  # 推送到新的 gh-pages 分支
